[package]
name = "cli"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.9.1"
ratatui = "0.29.0"
tokio = { version = "1.45.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
